<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              style="@style/DefaultRootView"
        >

    <LinearLayout
            style="@style/ActionBar"
            android:gravity="center_vertical">

        <Button
                android:id="@+id/filter_cancel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel"
                />

        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/filter_title"
                android:singleLine="true"
                android:gravity="center"/>

        <Button
                android:id="@+id/filter_save"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save"/>

    </LinearLayout>

</LinearLayout>