<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="10dp" >

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
            android:id="@+id/searchLocation"
            android:hint="@string/near_hint"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <requestFocus />
    </EditText>

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="10dp" >

        <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:onClick="search"
                android:text="@string/find" />

    </LinearLayout>

</LinearLayout>